# service/account_services/controller/get_all_account.go
@@ -1,19 +1,37 @@
 package controller
 
 import (
+	"bytes"
+	"encoding/json"
 	"net/http"
 
 	"github.com/PhuPhuoc/hrm-v1/common"
 )
 
-//	@Summary		get all account
-//	@Description	role admin: get all account
-//	@Tags			Account
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	common.success_response	"Get all account successful"
-//	@Failure		400	{object}	common.error_response	"Get all account failure"
-//	@Router			/api/v1/account [get]
+// @Summary		Get all accounts
+// @Description	Get all accounts. Requires admin role.
+// @Tags			Account
+// @Accept			json
+// @Produce		json
+// @Param			request	body		account.AccountFilter	true	"Get all accounts request"
+// @Success		200		{object}	common.success_response	"Get all accounts successful"
+// @Failure		400		{object}	common.error_response	"Get all accounts failure"
+// @Router			/api/v1/account/get-all [post]
+// @Security		ApiKeyAuth
 func (c *accountController) handleGetAllAccount(rw http.ResponseWriter, req *http.Request) {
-	common.WriteJSON(rw, common.SuccessResponse_Message("Get into get all account"))
+	var bodyData bytes.Buffer
+	_, err := bodyData.ReadFrom(req.Body)
+	if err != nil {
+		common.WriteJSON(rw, common.ErrorResponse_InvalidRequest(err))
+		return
+	}
+
+	var param_json_filter map[string]interface{}
+	err = json.Unmarshal(bodyData.Bytes(), &param_json_filter)
+	if err != nil {
+		common.WriteJSON(rw, common.ErrorResponse_InvalidRequest(err))
+		return
+	}
+
+	common.WriteJSON(rw, common.SuccessResponse_Data(param_json_filter))
 }
